--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -90,5 +90,6 @@
    ga('send', 'pageview');
     </script>
     {% endif %}
+  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=GPXu3nJElpnZn9KKzk-ZjVoFfpvdinps82RThsAm1xM&cl=ffffff&w=a"></script>
   </body>
 </html>
