--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -468,10 +468,12 @@ footer {
   align-items: center;}
 
   div.wrapper {
-    width:auto;
-    margin:0;
+    width: 95%;
+    max-width: 900px;
+    margin: 0 auto;
   }
 
+  
 
   header, section, footer {
     float:none;
