--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -3,540 +3,438 @@
 
 body {
   background-color: #fff;
-  padding:0px;
-  font: 16.0px/1.5 Crimson Pro, serif; 
-  color:#595959;
-  font-weight:400;
-  margin:0
+  padding: 0px;
+  font: 16.0px/1.5 Crimson Pro, serif;
+  color: #595959;
+  font-weight: 400;
+  margin: 0;
 }
 
-.social-icons a{display:inline-block;height:3rem;width:3rem;background-color:#495057;color:#fff!important;border-radius:100%;text-align:center;font-size:1.5rem;line-height:3.1rem;margin-right:1rem}.social-icons a:last-child{margin-right:0}.social-icons a:hover{background-color:#000000}
-
-autocolor{
-  color:#494949;
+.social-icons a {
+  display: inline-block;
+  height: 3rem;
+  width: 3rem;
+  background-color: #495057;
+  color: #fff!important;
+  border-radius: 100%;
+  text-align: center;
+  font-size: 1.5rem;
+  line-height: 3.1rem;
+  margin-right: 1rem;
+}
+.social-icons a:last-child {
+  margin-right: 0;
+}
+.social-icons a:hover {
+  background-color: #000000;
 }
 
+autocolor {
+  color: #494949;
+}
 lightonly {
   visibility: visible;
 }
-
 darkonly {
   visibility: hidden;
 }
 
 education {
-    font-weight: 500;
-    font-size: 115%;
-  }
+  font-weight: 500;
+  font-size: 115%;
+}
 papertitle {
-    font-weight: 600;
-    font-size: 100%;
-  }
-
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: #20212b;
-        color: #dadbdf;
-    }
-
-    autocolor{
-      color:#dadbdf;
-    }
-
-    lightonly {
-      visibility: hidden;
-    }
-
-    darkonly {
-      visibility: visible;
-    }
-
-    papertitle {
-    color:#eeeff0;
-    }
-
+  font-weight: 600;
+  font-size: 100%;
 }
 
-
-  .image {
-    border-radius: 0.35em;
-    border: 0;
-    display: inline-block;
-    position: relative;
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #20212b;
+    color: #dadbdf;
   }
 
-    .image:before {
-      -moz-transition: opacity 0.2s ease-in-out;
-      -webkit-transition: opacity 0.2s ease-in-out;
-      -ms-transition: opacity 0.2s ease-in-out;
-      transition: opacity 0.2s ease-in-out;
-      border-radius: 0.35em;
-      content: '';
-      display: block;
-      height: 100%;
-      left: 0;
-      opacity: 0.5;
-      position: absolute;
-      top: 0;
-      width: 100%;
-    }
+  autocolor {
+    color: #dadbdf;
+  }
 
-    .image.avatar {
-      border-radius: 100%;
-    }
+  lightonly {
+    visibility: hidden;
+  }
+  darkonly {
+    visibility: visible;
+  }
 
-      .image.avatar:before {
-        display: none;
-      }
+  papertitle {
+    color: #eeeff0;
+  }
+}
 
-      .image.avatar img {
-        border-radius: 100%;
-        width: 50%;
-        padding:20px;
-      }
-
-    #header .image.avatar {
-      margin: 0 0 1em 0;
-      width: 8.00em;
-    }
+.image {
+  border-radius: 0.35em;
+  border: 0;
+  display: inline-block;
+  position: relative;
+}
+.image:before {
+  transition: opacity 0.2s ease-in-out;
+  border-radius: 0.35em;
+  content: '';
+  display: block;
+  height: 100%;
+  left: 0;
+  opacity: 0.5;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+.image.avatar {
+  border-radius: 100%;
+}
+.image.avatar:before {
+  display: none;
+}
+.image.avatar img {
+  border-radius: 100%;
+  width: 50%;
+  padding: 20px;
+}
+#header .image.avatar {
+  margin: 0 0 1em 0;
+  width: 8.00em;
+}
 
 h1, h3, h4, h5, h6 {
   font-weight: 600;
-  color:#043361;
-  margin:0 0 20px;
+  color: #043361;
+  margin: 0 0 20px;
 }
-
 h2 {
-  color:#043361;
-  margin:2px 0px 15px;
+  color: #043361;
+  margin: 2px 0px 15px;
   font-size: 157%;
 }
 
 @media (prefers-color-scheme: dark) {
   h1, h3, h4, h5, h6 {
-    color:rgb(62, 183, 240);
+    color: rgb(62, 183, 240);
   }
-
   h2 {
-    color:rgb(62, 183, 240);
+    color: rgb(62, 183, 240);
   }
 }
 
 p, ul, ol, table, pre, dl {
-  margin:0 0 20px;
+  margin: 0 0 20px;
 }
 
 h1, h2, h3 {
-  line-height:1.1;
+  line-height: 1.1;
 }
-
 h1 {
-  font-size:28px;
+  font-size: 28px;
 }
 
 a {
-  color:#39c;
-  text-decoration:none;
+  color: #39c;
+  text-decoration: none;
 }
-
 a:hover {
-  color:#069;
+  color: #069;
 }
-
 @media (prefers-color-scheme: dark) {
   a {
-    color:rgb(62, 183, 240);
+    color: rgb(62, 183, 240);
   }
 }
-
 a small {
-  font-size:11px;
-  color:#777;
-  margin-top:-0.3em;
-  display:block;
+  font-size: 11px;
+  color: #777;
+  margin-top: -0.3em;
+  display: block;
 }
-
 a:hover small {
-  color:#777;
+  color: #777;
 }
 
 .wrapper {
-  width:960px;
-  margin:0 auto;
+  width: 960px;
+  margin: 0 auto;
 }
 
 blockquote {
-  border-left:1px solid #e5e5e5;
-  margin:0;
-  padding:0 0 0 20px;
-  font-style:italic;
+  border-left: 1px solid #e5e5e5;
+  margin: 0;
+  padding: 0 0 0 20px;
+  font-style: italic;
 }
 
 code, pre {
-  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
-  color:#333;
+  font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal,
+               Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
+  color: #333;
 }
-
 pre {
-  max-width:500px;
-  padding:8px 15px;
+  max-width: 500px;
+  padding: 8px 15px;
   background: #f8f8f8;
-  border-radius:5px;
-  border:1px solid #e5e5e5;
+  border-radius: 5px;
+  border: 1px solid #e5e5e5;
   overflow-x: auto;
 }
 
 table {
-  width:100%;
-  border-collapse:collapse;
+  width: 100%;
+  border-collapse: collapse;
 }
-
 th, td {
-  text-align:left;
-  padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
+  text-align: left;
+  padding: 5px 10px;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 dt {
-  color:#444;
-  font-weight:500;
+  color: #444;
+  font-weight: 500;
 }
-
 th {
-  color:#444;
+  color: #444;
 }
-
 @media (prefers-color-scheme: dark) {
   th {
-    color:rgb(62, 183, 240);
+    color: rgb(62, 183, 240);
   }
-
   dt {
-    color:rgb(62, 183, 240);
+    color: rgb(62, 183, 240);
   }
 }
 
 img {
-  max-width:100%;
+  max-width: 100%;
 }
 
 header {
-  width:220px;
-  float:left;
-  position:fixed;
-  -webkit-font-smoothing:subpixel-antialiased;
-  padding-top:4.0em;
-  text-align:center
+  width: 220px;
+  float: left;
+  position: fixed;
+  -webkit-font-smoothing: subpixel-antialiased;
+  padding-top: 4.0em;
+  text-align: center;
 }
-
-
-
 header ul {
-  list-style:none;
-  height:40px;
-  padding:0;
+  list-style: none;
+  height: 40px;
+  padding: 0;
   background: #f4f4f4;
-  border-radius:5px;
-  border:1px solid #e0e0e0;
-  width:270px;
+  border-radius: 5px;
+  border: 1px solid #e0e0e0;
+  width: 270px;
 }
-
 header li {
-  width:89px;
-  float:left;
-  border-right:1px solid #e0e0e0;
-  height:40px;
+  width: 89px;
+  float: left;
+  border-right: 1px solid #e0e0e0;
+  height: 40px;
 }
-
 header li:first-child a {
-  border-radius:5px 0 0 5px;
+  border-radius: 5px 0 0 5px;
 }
-
 header li:last-child a {
-  border-radius:0 5px 5px 0;
+  border-radius: 0 5px 5px 0;
 }
-
 header ul a {
-  line-height:1;
-  font-size:11px;
-  color:#999;
-  display:block;
-  text-align:center;
-  padding-top:6px;
-  height:34px;
+  line-height: 1;
+  font-size: 11px;
+  color: #999;
+  display: block;
+  text-align: center;
+  padding-top: 6px;
+  height: 34px;
 }
-
 header ul a:hover {
-  color:#999;
+  color: #999;
 }
-
 header ul a:active {
-  background-color:#f0f0f0;
+  background-color: #f0f0f0;
 }
 
 strong {
-  color:#222;
-  font-weight:500;
+  color: #222;
+  font-weight: 500;
 }
-
 @media (prefers-color-scheme: dark) {
   strong {
-    color:#eeeff0;
+    color: #eeeff0;
   }
 }
 
 header ul li + li + li {
-  border-right:none;
-  width:89px;
+  border-right: none;
+  width: 89px;
 }
-
 header ul a strong {
-  font-size:14px;
-  display:block;
-  color:#222;
+  font-size: 14px;
+  display: block;
+  color: #222;
 }
 
 section {
-  width:650px;
-  float:right;
-  padding-top:4.0em;
-  padding-bottom:50px;
+  width: 650px;
+  float: right;
+  padding-top: 4.0em;
+  padding-bottom: 50px;
 }
 
 small {
-  font-size:11px;
+  font-size: 11px;
 }
 
 hr {
-  border:0;
-  background:#e5e5e5;
-  height:1px;
-  margin:0 0 20px;
+  border: 0;
+  background: #e5e5e5;
+  height: 1px;
+  margin: 0 0 20px;
 }
 
 footer {
-  width:220px;
-  float:left;
-  position:fixed;
-  bottom:30px;
-  -webkit-font-smoothing:subpixel-antialiased;
-  text-align:center;
+  width: 220px;
+  float: left;
+  position: fixed;
+  bottom: 30px;
+  -webkit-font-smoothing: subpixel-antialiased;
+  text-align: center;
 }
+
+/* ---------- 下面是统一的响应式调整（960px 以下） ---------- */
 
 @media print, screen and (max-width: 960px) {
-
-  div.wrapper {
-    width:auto;
-    margin:0;
-  }
-
-
-  header, section, footer {
-    float:none;
-    position:static;
-    width:auto;
-  }
-
-  header {
-    padding-right:320px;
-  }
-
-  section {
-    border:1px solid #e5e5e5;
-    border-width:1px 0;
-    padding:20px 0;
-    margin:0 0 20px;
-  }
-
-  header a small {
-    display:inline;
-  }
-
-  header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
-  }
-
-
-   .image.avatar img {
-        border-radius: 100%;
-        width: 117px;
-        padding:20px;
-      }
-  #head1o2 {
-    visibility: hidden;
-  }
-      
-  #head2o2 {
-    visibility: hidden;
-  }
-  
-}
-
-
-
-
-
-
-@media print, screen and (max-width: 960px) {
-  body {
-    word-wrap:break-word;
-    padding:15px;
-  }
-
-  header {
-    padding:0;
-  }
-
-  header ul, header p.view {
-    
-  }
-
-  pre, code {
-    word-wrap:normal;
-  }
-}
-
-@media print, screen and (max-width: 480px) {
-  body {
-    padding:15px;
-  }
-
-  header ul {
-    width:99%;
-  }
-
-  header li, header ul li + li + li {
-    width:33%;
-  }
-
-  .image.avatar img {
-      border-radius: 100%;
-      width: 95px;
-      padding:20px;
-  }
-  #head1o2 {
-    visibility: hidden;
-  }
-  
-  #head2o2 {
-    visibility: hidden;
-  }
-
-}
-
-@media print {
-  body {
-    padding:0.4in;
-    font-size:12pt;
-    color:#444;
-  }
-}
-
-.biblink {
-  text-decoration:none;
-  display: inline;
-  margin-right: 0px;
-}
-
-.fakelink {
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.bibref {
-  font-size: 70%;
-  margin-top: 10px;
-  margin-left: 0px;
-  display:none;
-  font-family: monospace;
-}
-
-
-
-
-
-
-
-
-
-@media print, screen and (max-width: 960px) {
-
-  .pub-row {
-  display: flex; 
-  align-items: center;}
-
-  div.wrapper {
+  /* 让主体容器变宽一些 */
+  .wrapper {
     width: 95%;
     max-width: 900px;
     margin: 0 auto;
   }
 
-  
-
-  header, section, footer {
-    float:none;
-    position:static;
-    width:auto;
+  /* 让 header、section、footer 不再固定宽度与浮动，改为顺序排列 */
+  header,
+  section,
+  footer {
+    float: none;
+    position: static;
+    width: auto;
   }
 
+  /* 增加一点留白，如果想再更宽就改小这个 padding 值 */
+  body {
+    word-wrap: break-word;
+    padding: 15px;
+  }
+
+  /* 让 .pub-row 横向排列（例如多篇 paper 的列表） */
+  .pub-row {
+    display: flex;
+    align-items: center;
+  }
+
+  /* 依旧保留原先的一些设置 */
   header {
-    padding-right:320px;
+    padding: 0;
+    /* 若仍想在小屏保留右边 320px 留白，可保留：
+       padding-right: 320px;
+       但这会缩小中间的内容区域；若想最大化内容区，就去掉它。 */
   }
 
   section {
-    border:1px solid #e5e5e5;
-    border-width:1px 0;
-    padding:20px 0;
-    margin:0 0 20px;
+    border: 1px solid #e5e5e5;
+    border-width: 1px 0;
+    padding: 20px 0;
+    margin: 0 0 20px;
   }
 
+  /* 小屏下，header a 的 small 不再隐藏 */
   header a small {
-    display:inline;
+    display: inline;
   }
 
+  /* 让 header 里的 ul 移动到页面右上方 */
   header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
+    position: absolute;
+    right: 50px;
+    top: 52px;
+    width: auto; /* 视情况可加 */
   }
 
+  /* 头像稍微变大一点 */
+  .image.avatar img {
+    border-radius: 100%;
+    width: 117px;
+    padding: 20px;
+  }
 
-   .image.avatar img {
-        border-radius: 100%;
-        width: 117px;
-        padding:20px;
-      }
+  /* 隐藏这两个 id */
   #head1o2 {
     visibility: hidden;
   }
-      
   #head2o2 {
     visibility: hidden;
   }
-  
+
+  pre,
+  code {
+    word-wrap: normal;
+  }
 }
 
-@media print, screen and (max-width: 960px) {
+/* 针对非常小的屏幕（480px 以下）的继续优化 */
+@media print, screen and (max-width: 480px) {
   body {
-    word-wrap:break-word;
-    padding:1px;
+    padding: 15px;
   }
 
-  .pub-row {
-  display: flex; 
-  align-items: center;}
-
-  header {
-    padding:0;
+  header ul {
+    width: 99%;
+  }
+  header li,
+  header ul li + li + li {
+    width: 33%;
+  }
+  .image.avatar img {
+    width: 95px;
+    padding: 20px;
   }
 
-  header ul, header p.view {
-    
+  /* 如果不再需要这两个隐藏，可以去掉 */
+  #head1o2 {
+    visibility: hidden;
   }
+  #head2o2 {
+    visibility: hidden;
+  }
+}
 
-  pre, code {
-    word-wrap:normal;
+/* 打印样式 */
+@media print {
+  body {
+    padding: 0.4in;
+    font-size: 12pt;
+    color: #444;
   }
+}
+
+/* 论文引用等辅助 */
+.biblink {
+  text-decoration: none;
+  display: inline;
+  margin-right: 0px;
+}
+.fakelink {
+  text-decoration: none;
+  cursor: pointer;
+}
+.bibref {
+  font-size: 70%;
+  margin-top: 10px;
+  margin-left: 0px;
+  display: none;
+  font-family: monospace;
 }
