--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,7 +211,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/Cornell_campus.jpg") top center;
+  background: url("../img/BIT_view_2.jpg") top center;
   background-size: cover;
 }
 
